--- a/package.json
+++ b/package.json
@@ -1,12 +1,16 @@
 {
   "name": "trail-earg-ai",
-  "version": "0.1.0",
+  "version": "1.0.0",
   "scripts": {
     "start": "node server.js"
   },
   "dependencies": {
     "express": "^4.19.2",
     "dotenv": "^16.4.5",
-    "groq-sdk": "^0.5.0"
+    "sqlite3": "^5.1.7",
+    "uuid": "^9.0.1",
+    "nodemailer": "^6.9.13",
+    "groq-sdk": "^0.7.0",
+    "cookie-parser": "^1.4.6"
   }
 }
